[package]
name = "schnuffel-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-convert = "1.4.1"
petgraph = { version = "0.6.5", features = ["rayon", "serde-1"] }
serde = { version = "1.0.204", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
